--- a/index.html
+++ b/index.html
@@ -18,9 +18,16 @@
 </head>
 
 <body>
-<header id="brand">
-  <a href="/" title="Go to mcdlr homepage">Go to mcdlr homepage</a>
+
+<header id='quoin'>
+  <div id='brand'>
+    <a href='/' title='Go to mcdlr homepage'>Go to mcdlr homepage</a>
+  </div>
+  <div id='octo-peek'>
+    <a href='https://github.com/DrummerHead/Scannato' rel='external'><span>Fork me on Github!</span></a>
+  </div>
 </header>
+
 <div id="wrap">
   <div id="formh">
     <form action="" id="doer">
