--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 <meta name="description" content="Scannato is the name of this dynamic jQuery gallery. It works by generating links to images who&#8217;s name follow a numeric progression.">
 <meta name="author" content="DrummerHead">
 
-<link type="text/css" rel="stylesheet" href="css/stijl.css">
+<link rel="stylesheet" href="css/stijl.css">
 <link rel="stylesheet" href="../css/promiscuous.css?1">
 <link rel='image_src' href='http://mcdlr.com/img/thumbs/gal.png'>
 
-<script type="text/javascript" src="../js/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="js/gal.js"></script>
-
 </head>
+
 
 <body>
 
@@ -65,6 +63,11 @@
     <li></li>
   </ul>
 </div>
+
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')</script>
+<script src="js/gal.js"></script>
 
 <!-- Google analytics -->
 <script>
