Improve labels, Add error messages

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="vessel">
       <ol>
         <li>
-          <label for="url">url:</label>
+          <label for="url">image url:</label>
           <input type="url" id="url">
         </li>
         <li>
@@ -47,7 +47,7 @@
           <input type="number" id="padding">
         </li>
         <li>
-          <label for="format">format:</label>
+          <label for="format">image format:</label>
           <input type="text" id="format" list="extensions">
           <datalist id="extensions">
             <option value=".jpg">
