Add 'Big Images' linearized results option

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
           </datalist>
         </li>
       </ol>
+      <div id='lHold'>
+        <input type='checkbox' id='linearize'>
+        <label for='linearize'>Big images</label>
+      </div>
       <input type="submit" value="do it" id="doit">
     </div>
   </form>
