Self-contain repo for forking

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="author" content="DrummerHead">
 
 <link rel="stylesheet" href="css/stijl.css">
-<link rel="stylesheet" href="../css/promiscuous.css?1">
+<link rel="stylesheet" href="http://mcdlr.com/css/promiscuous.css">
 <link rel='image_src' href='http://mcdlr.com/img/thumbs/gal.png'>
 
 </head>
