--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <header id='quoin'>
   <div id='brand'>
-    <a href='/' title='Go to mcdlr homepage'>Go to mcdlr homepage</a>
+    <a href='http://mcdlr.com/' title='Go to mcdlr homepage'>Go to mcdlr homepage</a>
   </div>
   <div id='octo-peek'>
     <a href='https://github.com/DrummerHead/Scannato' rel='external'><span>Fork me on Github!</span></a>
