Checked by default

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </li>
       </ol>
       <div id='lHold'>
-        <input type='checkbox' id='linearize'>
+        <input type='checkbox' id='linearize' checked='checked'>
         <label for='linearize'>Big images</label>
       </div>
       <input type="submit" value="do it" id="doit">
